--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,15 @@
 {
-    "name": "laravel/laravel",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
-    "license": "MIT",
+    "name": "tridentsdk/website",
+    "description": "The official TridentSDK Website.",
+    "keywords": ["tridentsdk", "website"],
+    "license": "Apache 2.0",
     "type": "project",
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
         "barryvdh/laravel-debugbar": "^2.2",
-        "barryvdh/laravel-ide-helper": "^2.2"
+        "barryvdh/laravel-ide-helper": "^2.2",
+        "longman/telegram-bot": "^0.34.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -50,11 +51,5 @@
     },
     "config": {
         "preferred-install": "dist"
-    },
-    "repositories": {
-        "repo-name": {
-            "type": "git",
-            "url": "git@github.com:jamisonvalenta/Laravel-4-Generators.git"
-        }
     }
 }
