--- a/public/bower.json
+++ b/public/bower.json
@@ -15,13 +15,11 @@
     "test",
     "tests"
   ],
-  "resolutions": {
-    "jquery": "^3.1.0"
-  },
   "dependencies": {
     "bootstrap-material-design": "^0.5.10",
     "bootstrap": "^3.3.6",
-    "jquery": "^3.1.0",
-    "jquery-ui": "^1.12.0"
+    "jquery-ui": "^1.12.0",
+    "summernote": "^0.8.1",
+    "jquery": "^2.2"
   }
 }
