--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "barryvdh/laravel-debugbar": "^2.2",
         "longman/telegram-bot": "^0.34.0",
         "recaptcha/php5": "v2.0.0",
-        "laravelcollective/html": "^5.2.0"
+        "laravelcollective/html": "^5.2.0",
+        "doctrine/dbal": "^2.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -19,8 +20,7 @@
         "symfony/css-selector": "2.8.*|3.0.*",
         "symfony/dom-crawler": "2.8.*|3.0.*",
         "way/generators": "3.0.3",
-        "barryvdh/laravel-ide-helper": "^2.2",
-        "doctrine/dbal": "~2.3"
+        "barryvdh/laravel-ide-helper": "^2.2"
     },
     "autoload": {
         "classmap": [
