--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.2.*",
+        "laravel/framework": "5.3.*",
         "barryvdh/laravel-debugbar": "^2.2",
         "longman/telegram-bot": "^0.34.0",
         "recaptcha/php5": "v2.0.0",
@@ -17,8 +17,8 @@
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
-        "symfony/css-selector": "2.8.*|3.0.*",
-        "symfony/dom-crawler": "2.8.*|3.0.*",
+        "symfony/css-selector": "3.1.*",
+        "symfony/dom-crawler": "3.1.*",
         "way/generators": "3.0.3",
         "barryvdh/laravel-ide-helper": "^2.2"
     },
