Add password reset

--- a/.env.example
+++ b/.env.example
@@ -25,5 +25,5 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
-RECAPTCHA_PUBLIC=null
-RECAPTCHA_SECRET=null
+RECAPTCHA_PUBLIC_KEY=null
+RECAPTCHA_PRIVATE_KEY=null
