--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "longman/telegram-bot": "^0.34.0",
         "recaptcha/php5": "v2.0.0",
         "laravelcollective/html": "^5.2.0",
-        "doctrine/dbal": "^2.5"
+        "greggilbert/recaptcha": "^2.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -20,7 +20,8 @@
         "symfony/css-selector": "3.1.*",
         "symfony/dom-crawler": "3.1.*",
         "way/generators": "3.0.3",
-        "barryvdh/laravel-ide-helper": "^2.2"
+        "barryvdh/laravel-ide-helper": "^2.3",
+        "doctrine/dbal": "^2.5"
     },
     "autoload": {
         "classmap": [
