--- a/.env.example
+++ b/.env.example
@@ -25,5 +25,9 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
+SES_KEY=
+SES_SECRET=
+SES_REGION=eu-west-1
+
 RECAPTCHA_PUBLIC_KEY=null
 RECAPTCHA_PRIVATE_KEY=null
