--- a/public/package.json
+++ b/public/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "bootstrap": "^4.0.0-beta",
+    "bootstrap-material-design": "^4.0.0-beta.3",
     "bootstrap-validator": "^0.11.9",
     "jquery": "^3.2.1",
     "open-iconic": "^1.1.1",
